# AEDS_1_Final_Project

./: CMakeLists.txt  main.cpp  readme.md
class/: Date.cpp  Date.h  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h
